[gd_scene load_steps=31 format=3 uid="uid://dklgqdynioec2"]

[ext_resource type="Script" uid="uid://1c77jvuypo32" path="res://scenes/entities/enemy/enemy.gd" id="1_1y44r"]
[ext_resource type="PackedScene" uid="uid://bp8s8r2vsohgh" path="res://scenes/components/health_component.tscn" id="2_6fawb"]
[ext_resource type="AudioStream" uid="uid://1hmbycmqghia" path="res://assets/audio/hit_1.wav" id="2_frkcr"]
[ext_resource type="AudioStream" uid="uid://doae36omumbj3" path="res://assets/audio/hit_2.wav" id="3_h0e4h"]
[ext_resource type="PackedScene" uid="uid://6eu845hi2djh" path="res://scenes/components/hit_flash_sprite_component.tscn" id="4_0wdte"]
[ext_resource type="PackedScene" uid="uid://cvd41b1v6mxef" path="res://scenes/components/hitbox_component.tscn" id="4_dxsuy"]
[ext_resource type="PackedScene" uid="uid://dniiamg0dyruo" path="res://scenes/components/hurtbox_component.tscn" id="4_in88q"]
[ext_resource type="AudioStream" uid="uid://c1hykljgaxcbi" path="res://assets/audio/hit_3.wav" id="4_jkr0c"]
[ext_resource type="AudioStream" uid="uid://cealdtp227qx" path="res://assets/audio/hit_4.wav" id="5_sbss2"]
[ext_resource type="AudioStream" uid="uid://dojaeay6b18au" path="res://assets/audio/woosh2.ogg" id="6_frkcr"]
[ext_resource type="Texture2D" uid="uid://dovj754acrlq3" path="res://assets/effects/shadow.png" id="8_8ei1b"]
[ext_resource type="Texture2D" uid="uid://ci42daclhvmu0" path="res://assets/tilesets/monochrome-transparent.png" id="10_frkcr"]

[sub_resource type="Animation" id="Animation_ddkys"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/HitFlashSpriteComponent:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_h26p2"]
resource_name = "dash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [Vector2(1.25, 0.75), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/HitFlashSpriteComponent:skew")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [0.261799, 0.0]
}

[sub_resource type="Animation" id="Animation_8ei1b"]
resource_name = "ready_dash"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.233333),
"transitions": PackedFloat32Array(3, 1),
"update": 0,
"values": [0.0, -0.174533]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.133333, 0.233333),
"transitions": PackedFloat32Array(2, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.95, 1.1), Vector2(0.9, 1.2)]
}

[sub_resource type="Animation" id="Animation_ilesx"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.333333),
"transitions": PackedFloat32Array(1, 1.25, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.8, 1.2), Vector2(1.1, 0.9)]
}

[sub_resource type="Animation" id="Animation_frkcr"]
resource_name = "special"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Visuals/HitFlashSpriteComponent:skew")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1.5, 1, 1.5),
"update": 0,
"values": [0.0, -0.15708, 0.0, 0.15708]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Visuals/HitFlashSpriteComponent:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1.5, 1, 1.5, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.9, 1.1), Vector2(1.1, 0.9), Vector2(0.9, 1.1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h26p2"]
_data = {
&"RESET": SubResource("Animation_ddkys"),
&"dash": SubResource("Animation_h26p2"),
&"ready_dash": SubResource("Animation_8ei1b"),
&"run": SubResource("Animation_ilesx"),
&"special": SubResource("Animation_frkcr")
}

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1y44r"]
properties/0/path = NodePath(".:global_position")
properties/0/spawn = true
properties/0/replication_mode = 1
properties/1/path = NodePath(".:target_position")
properties/1/spawn = true
properties/1/replication_mode = 2
properties/2/path = NodePath(".:current_state")
properties/2/spawn = true
properties/2/replication_mode = 2

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_4oa0t"]
random_pitch = 1.1
random_volume_offset_db = 1.0
streams_count = 4
stream_0/stream = ExtResource("2_frkcr")
stream_1/stream = ExtResource("3_h0e4h")
stream_2/stream = ExtResource("4_jkr0c")
stream_3/stream = ExtResource("5_sbss2")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h0e4h"]
random_pitch = 1.1
random_volume_offset_db = 2.0
streams_count = 1
stream_0/stream = ExtResource("6_frkcr")

[sub_resource type="Shader" id="Shader_2we7b"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float percent : hint_range(0.0, 1.0, 0.1);
uniform vec4 outline_color : source_color;
uniform vec4 modulate_color: source_color = vec4(1.0);

void fragment(){
	float size_x = 1.0/float(textureSize(TEXTURE, 0).x);
	float size_y = 1.0/float(textureSize(TEXTURE, 0).y);
	vec4 sprite_color = texture(TEXTURE, UV) * modulate_color;
	float alpha = -8.0 * sprite_color.a;
	alpha += texture(TEXTURE, UV + vec2(size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(0, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(0, -size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(size_x, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, -size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(size_x, -size_y)).a;
	vec4 final_color = mix(sprite_color, outline_color, clamp(alpha, 0.0, 1.0));
	vec4 outlined_texture = vec4(final_color.rgb, clamp(abs(alpha) + sprite_color.a, 0.0, 1.0));
	vec4 white_color = vec4(1.0, 1.0, 1.0, outlined_texture.a);
	COLOR = mix(outlined_texture, white_color, percent);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_8ei1b"]
resource_local_to_scene = true
shader = SubResource("Shader_2we7b")
shader_parameter/percent = 0.0
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/modulate_color = Color(0.901961, 0.282353, 0.180392, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ei1b"]
atlas = ExtResource("10_frkcr")
region = Rect2(595, 221, 16, 16)

[sub_resource type="Shader" id="Shader_8ei1b"]
resource_local_to_scene = true
code = "shader_type canvas_item;

uniform float percent : hint_range(0.0, 1.0, 0.1);
uniform vec4 outline_color : source_color;
uniform vec4 modulate_color: source_color = vec4(1.0);

void fragment(){
	float size_x = 1.0/float(textureSize(TEXTURE, 0).x);
	float size_y = 1.0/float(textureSize(TEXTURE, 0).y);
	vec4 sprite_color = texture(TEXTURE, UV) * modulate_color;
	float alpha = -8.0 * sprite_color.a;
	alpha += texture(TEXTURE, UV + vec2(size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, 0)).a;
	alpha += texture(TEXTURE, UV + vec2(0, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(0, -size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(size_x, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(-size_x, -size_y)).a;
	alpha += texture(TEXTURE, UV + vec2(size_x, -size_y)).a;
	vec4 final_color = mix(sprite_color, outline_color, clamp(alpha, 0.0, 1.0));
	vec4 outlined_texture = vec4(final_color.rgb, clamp(abs(alpha) + sprite_color.a, 0.0, 1.0));
	vec4 white_color = vec4(1.0, 1.0, 1.0, outlined_texture.a);
	COLOR = mix(outlined_texture, white_color, percent);
}"

[sub_resource type="ShaderMaterial" id="ShaderMaterial_frkcr"]
resource_local_to_scene = true
shader = SubResource("Shader_8ei1b")
shader_parameter/percent = 0.0
shader_parameter/outline_color = Color(0, 0, 0, 1)
shader_parameter/modulate_color = Color(1, 1, 1, 1)

[sub_resource type="AtlasTexture" id="AtlasTexture_h0e4h"]
atlas = ExtResource("10_frkcr")
region = Rect2(408, 170, 16, 16)

[sub_resource type="CircleShape2D" id="CircleShape2D_lw7nh"]
radius = 4.0

[sub_resource type="CircleShape2D" id="CircleShape2D_frkcr"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_h0e4h"]
radius = 8.0

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 2
collision_mask = 3
motion_mode = 1
script = ExtResource("1_1y44r")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_h26p2")
}
next/ready_dash = &"dash"
blend_times = [&"ready_dash", &"ready_dash", 0.1]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1y44r")

[node name="TargetAcquisitionTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="ReadyAttackTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="Audio" type="Node2D" parent="."]

[node name="HitStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_4oa0t")
volume_db = -1.0
max_distance = 640.0
attenuation = 3.0
max_polyphony = 3
bus = &"SFX"

[node name="AttackStreamPlayer2D" type="AudioStreamPlayer2D" parent="Audio"]
unique_name_in_owner = true
stream = SubResource("AudioStreamRandomizer_h0e4h")
volume_db = -2.0
max_distance = 640.0
attenuation = 3.0

[node name="HealthComponent" parent="." instance=ExtResource("2_6fawb")]
max_health = 2

[node name="AlertSprite" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_8ei1b")
position = Vector2(0, -24)
texture = SubResource("AtlasTexture_8ei1b")

[node name="Visuals" type="Node2D" parent="."]
unique_name_in_owner = true

[node name="ShadowSprite" type="Sprite2D" parent="Visuals" groups=["enemy"]]
modulate = Color(0, 0, 0, 0.6)
texture = ExtResource("8_8ei1b")

[node name="HitFlashSpriteComponent" parent="Visuals" node_paths=PackedStringArray("health_component") instance=ExtResource("4_0wdte")]
material = SubResource("ShaderMaterial_frkcr")
texture = SubResource("AtlasTexture_h0e4h")
centered = false
offset = Vector2(-8, -14)
health_component = NodePath("../../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_lw7nh")

[node name="HitboxComponent" parent="." instance=ExtResource("4_dxsuy")]
visible = false
position = Vector2(0, -5)
collision_layer = 4

[node name="HitboxCollisionShape" type="CollisionShape2D" parent="HitboxComponent"]
unique_name_in_owner = true
shape = SubResource("CircleShape2D_frkcr")

[node name="HurtboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("4_in88q")]
position = Vector2(0, -5)
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtboxComponent"]
shape = SubResource("CircleShape2D_h0e4h")
